Initial import into version control.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-AUTHORS of $project
+AUTHORS of gspec
 
-$prename $surname <$login@ikp.uni-koeln.de>: Initiator of $project
+Norbert Braun <n.braun@ikp.uni-koeln.de>: Initiator of gspec
