--- a/INSTALL
+++ b/INSTALL
@@ -1,1 +1,12 @@
-Installation instructions go here.
+Installation instructions for HDTV
+
+At the moment, HDTV can only be installed locally.
+
+* Execute ``make'' in the src/ subdirectory.
+* Create a directory ~/.hdtv
+* Copy, or link, the following directories into ~/.hdtv:
+	- hdtv/
+	- plugins/
+	- lib/
+
+* Copy startup.py into ~/.hdtv. Customize if desired.
