More work on new fitter infrastructure (better control over fixed/free parameters, etc.)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-AUTHORS of gspec
+The HDTV development team
 
-Norbert Braun <n.braun@ikp.uni-koeln.de>: Initiator of gspec
+Norbert Braun <n.braun@ikp.uni-koeln.de>
 Tanja Kotthaus <t.kotthaus@ikp.uni-koeln.de>
