--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-Short description of the project goes here.
-
-Then a reference to further documentation. e.g. doc/Manual.txt
+HDTV tries to provide functionality similar to the old TV program 
+on top of the ROOT data analysis toolkit developed at CERN. The use 
+of Python gives HDTV much better scripting capabilities than TV. 
+Also, since HDTV consists of a number of modules that can in principle 
+be used independently of each other, HDTV is much easier to extend and 
+customize. HDTV is written in a mixture of C++ and Python, glued 
+together using PyROOT. 
