--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ The HDTV development team
 
 Norbert Braun <n.braun@ikp.uni-koeln.de>
 Tanja Kotthaus <t.kotthaus@ikp.uni-koeln.de>
+Ralf Schulze <r.schulze@ikp.uni-koeln.de>
