Bugfix for hiding region/background markers on deactivation of fits.

--- a/TODO
+++ b/TODO
@@ -14,3 +14,4 @@
 * Bundle "cal pos" commands in one plugin
 * database/lib lookup command
 * Hotkey to activate fit under mouse pointer
+* Fits without background fit are not restored properly
