--- a/TODO
+++ b/TODO
@@ -10,8 +10,11 @@
 * Save fit id in XML and restore correctly
 * view_width for "fit focus" as config option
 * command to set peak/region/background marker from command line
-* fit hide XX command
 * Bundle "cal pos" commands in one plugin
-* database/lib lookup command
 * Hotkey to activate fit under mouse pointer
 * Fits without background fit are not restored properly
+* Fix reading of XML file: Fits with e.g. only background raise exception on reading
+* Warn when quitting and there are unsaved fits
+* Bugfix: when reading fits for spectra that are loaded, but not shown do not draw fits
+* don't set view to full after doing "cal pos enter"
+* Avoid double fits (e.g. when reading from XML)
