Update TODO to a reference to our trac system

--- a/TODO
+++ b/TODO
@@ -1,3 +1,2 @@
-* Customize README
-* Customize INSTALL
-* Check LICENSE
+All HDTV tickets are now maintained via trac:
+https://www.ikp.uni-koeln.de/projects/hdtv/trac
